Adicionando classes utilitárias parte 1

--- a/styles/global.css
+++ b/styles/global.css
@@ -31,6 +31,8 @@
   --fs-lg: 1.25rem;
   --fs-xl: 1.5rem;
   --fs-2xl: 2.5rem;
+
+  --px-lg: 1.5rem;
 }
 
 html {
@@ -68,10 +70,14 @@ a {
 ul[role="list"] {
   list-style: none;
 }
+
+
 @media (width>=80em) {
   :root {
     --fs-lg: 2rem;
     --fs-xl: 3rem;
     --fs-2xl: 4rem;
+
+    --px-lg: 2rem
   }
 }
