--- a/styles/utility.css
+++ b/styles/utility.css
@@ -28,6 +28,15 @@
     gap: 1rem;
 }
 
+.flex{
+  display: flex;
+  gap: 1rem;
+}
+.grid{
+  display: grid;
+  gap: 1rem;
+}
+
 @media (width>=80em) {
   .container {
     --max-width: 80rem;
