--- a/styles/utility.css
+++ b/styles/utility.css
@@ -11,33 +11,37 @@
   padding-block: var(--px-lg);
 }
 
-
 .container {
   --max-width: 375px;
   width: min(var(--max-width), 100% - var(--px-lg) * 2);
   margin-inline: auto;
-  border: 1px solid violet;
 }
 
-.desktop-only{
-    display: none;
+.desktop-only {
+  display: none;
 }
 
-.even-columns{
-    display: grid;
-    gap: 1rem;
-}
-
-.flex{
-  display: flex;
-  gap: 1rem;
-}
-.grid{
+.even-columns {
   display: grid;
   gap: 1rem;
 }
-.gap-1{
+
+.flex {
+  display: flex;
   gap: 1rem;
+}
+.items-center {
+  align-items: center;
+}
+.grid {
+  display: grid;
+  gap: 1rem;
+}
+.gap-1 {
+  gap: 1rem;
+}
+.gap-1\.5 {
+  gap: 1.5rem;
 }
 
 @media (width>=80em) {
@@ -45,11 +49,11 @@
     --max-width: 80rem;
   }
 
-  .desktop-only{
+  .desktop-only {
     display: initial;
   }
 
-  .even-columns{
+  .even-columns {
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
   }
